# Spirit_Tower

./: .gitignore  CMakeLists.txt  Criaturas.h  Game.cpp  Game.h  Nodo.h  main.cpp
Assets/: MiniMapRT.renderTexture
Assets/Animation/: Attack_Down.anim  Attack_Left.anim  Attack_Right.anim  Attack_Up.anim  Palyer_Idle.anim  Palyer_Walk_Down.anim  Palyer_Walk_Left.anim  Palyer_Walk_Right.anim  Palyer_Walk_Up.anim  Player.controller
Assets/EnemyFOV/: FieldOfView.prefab
Assets/Materials/: Coins.mat  FOV-Red.mat  FOV.mat
Assets/Prefabs/: Arrow.prefab  Chuchu.prefab  Client.prefab  FieldOfView-Red Variant.prefab  FieldOfView.prefab  ParticleSystemCoins.prefab  PlayerSprite.prefab  Room.prefab
Assets/Resources/: Gray_Enemy1.prefab  Spots.prefab
Assets/Scenes/: Dungeon1.unity  Dungeon2.unity  Dungeon3.unity  Start.unity
Assets/Scripts/: Chest.cs  Chuchu.cs  Client.cs  Damage.cs  Enemy_Attack.cs  Enemy_Patrol.cs  FieldOfView.cs  FollowPlayer.cs  Interactable.cs  (+10 more)
ProjectSettings/: EditorBuildSettings.asset  GraphicsSettings.asset  ProjectSettings.asset  TagManager.asset
SpiritTower/: CMakeLists.txt  main.cpp
SpiritTower/src/: Criaturas.cpp  Game.h  LinkedList.cpp  LinkedList.h  Player.cpp  Player.h  Specter.cpp  Specter.h  controller.cpp  controller.h  main.cpp  server.cpp  server.h
SpiritTower/src/genetico/: Evolucionador.cpp
SpiritTower/src/path/: A_star.cpp  Backtracking.cpp  Backtracking.h
Spirit_Tower-ash/: CMakeLists.txt  main.cpp
genetico/: Espectros.cpp  Espectros.h  Evolucionador.cpp  Evolucionador.h
path/: A_star.cpp  A_star.h  Backtracking.cpp  lista.h
(+236 files in other folders)
